tests/fail/separators.rs
use llvm_cov_358_min_repo::fizzbuz;

pub fn main() {
    let _ = fizzbuz! {
        1 . 2| fizz; 4: buzz  fizz
    };
}
